--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Release
 
 on:
-    push:
+    pull_request:
+        types: [closed]
         branches: [main, master]
     workflow_dispatch:
         inputs:
@@ -61,7 +62,11 @@ jobs:
     release:
         runs-on: ubuntu-latest
         needs: test
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch'
+        # Only run on merged release PRs or manual workflow dispatch
+        if: |
+            github.event_name == 'workflow_dispatch' || 
+            (github.event.pull_request.merged == true && 
+             (startsWith(github.head_ref, 'release/') || contains(github.event.pull_request.labels.*.name, 'release')))
         outputs:
             version: ${{ steps.release.outputs.version }}
             changelog: ${{ steps.changelog.outputs.changelog }}
@@ -368,7 +373,7 @@ jobs:
     publish-marketplace:
         runs-on: ubuntu-latest
         needs: [test, release]
-        if: success() && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+        if: success()
 
         steps:
             - name: Checkout repository
